--- a/assignment2/assignment2.css
+++ b/assignment2/assignment2.css
@@ -93,3 +93,28 @@ button:hover {
     display: inline-block;
     margin: 20px auto;
 }
+
+.board {
+    font-size: 24px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    white-space: pre; /* Preserve whitespace */
+}
+
+.board .cell {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.board .cell img {
+    width: 100%;
+    height: 100%;
+}
