--- a/assignment2/assignment2.css
+++ b/assignment2/assignment2.css
@@ -95,10 +95,10 @@ button:hover {
 }
 
 .board {
-    font-size: 24px;
+    font-size: 50px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px;
+    background-color: black;
+    padding: 20px;
     border: 2px solid white;
     border-radius: 10px;
     display: flex;
