--- a/assignment2/assignment2.css
+++ b/assignment2/assignment2.css
@@ -7,20 +7,20 @@
 }
 
 html, body {
-    height: 100%; /* Ensure the html and body elements take up full height */
+    height: 100%;
 }
 
 body {
     margin-top: 200px;
     padding: 0;
     background-color: white;
-    overflow-x: hidden; /* Restricts horizontal scrollability */
-    overflow-y: auto; /* Allows vertical scrollability */
+    overflow-x: hidden;
+    overflow-y: auto;
     text-align: center;
-    background-image: url('photos/backgroundimage2.jpg'); /* Set the background image */
-    background-size: cover; /* Make the image cover the entire background */
-    background-position: center; /* Center the background image */
-    background-attachment: fixed; /* Ensure the background image is fixed and doesn't scroll */
+    background-image: url('photos/backgroundimage2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .header {
@@ -33,8 +33,8 @@ body {
     backdrop-filter: blur(5px);
     padding: 33px 10%;
     display: flex;
-    justify-content: center; /* Center the content horizontally */
-    align-items: center; /* Center the content vertically */
+    justify-content: center;
+    align-items: center;
     z-index: 1000;
 }
 
@@ -47,7 +47,7 @@ body {
     font-size: 40px;
     color: white;
     font-weight: bold;
-    margin-left: 20px; /* Add margin to the left of the text */
+    margin-left: 20px; 
 }
 
 .logo {
@@ -84,7 +84,7 @@ button:hover {
 .scoreboard {
     width: 100px;
     height: 50px;
-    line-height: 50px; /* Center the text vertically */
+    line-height: 50px;
     font-size: 24px;
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
@@ -103,7 +103,7 @@ button:hover {
     border-radius: 10px;
     display: flex;
     justify-content: center;
-    white-space: pre; /* Preserve whitespace */
+    white-space: pre;
 }
 
 .board .cell {
